--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "validator": "^13.12.0"
   },
   "devDependencies": {
